--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Culminating_Assignment.jar
+dist.jar=${dist.dir}/Culminating.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Culminating_Assignment
+dist.jlink.output=${dist.jlink.dir}/Culminating
 excludes=
 file.reference.core.jar=../../../Downloads/core.jar
 includes=**
@@ -72,7 +72,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Culminating_Assignment
+jlink.launcher.name=Culminating
 main.class=graphics.Graphics
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
